syntax = "proto3";

option go_package = "grpc-server/aws";

// The greeting service definition.
service aws {
  // CreateBucket
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {}
  // ListBuckets
  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {}
  // PutObject
  rpc PutObject(PutObjectRequest) returns (PutObjectResponse) {}
  // GetObject
  rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}
  // DeleteObject
  rpc DeleteObject(DeleteObjectRequest) returns (DeleteObjectResponse) {}
}

enum result {
  UNDEFINED = 0;
  OK = 1;
  ERR = 2;
}

message CreateBucketRequest {}

message CreateBucketResponse {
  result result = 1;
}

message ListBucketsRequest {}

message ListBucketsResponse {
  result result = 1;
  message bucket {
    string name = 1;
  }
  repeated bucket buckets = 2;
}

message PutObjectRequest {
  string key = 1;
  string content = 2;
}

message PutObjectResponse {
  result result = 1;
  string key = 2;
}

message GetObjectRequest {
  string key = 1;
}

message GetObjectResponse {
  result result = 1;
  string key = 2;
  string content = 3;
}

message DeleteObjectRequest {
  string key = 1;
}

message DeleteObjectResponse {
  result result = 1;
  string key = 2;
}
